# SOP_Generator

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.infra.yml  docker-compose.yml  pyproject.toml  requirements-ai.txt  requirements.txt
.github/workflows/: ci.yml
agents/: __init__.py  base.py  generation.py  perception.py  reasoning.py  sop_vlm.py
apps/: bus.py
apps/api/: audit.py  config.py  main.py  metrics.py  objstore.py  pipeline.py  security_ctx.py  store.py
apps/api/routers/: admin.py  chat.py  drift.py  exports.py  feedback.py  health.py  improvements.py  integrations.py  jobs.py  notifications.py  processes.py  review.py  search.py  sops.py
apps/api/static/: app.js  index.html
apps/inference_gateway/: adapters.py  cache.py  gateway.py  profiles.py
apps/orchestrator/: graph.py
deck/: pitch-outline.md
docs/: README.md  backlog.csv  gap-analysis.md
eval/: harness.py
frontend/: README.md
helm/processiq/: Chart.yaml  values.yaml
helm/processiq/templates/: deployment.yaml
infra/docker/: api.Dockerfile
migrations/: 0001_init.sql
more/: sop.md
processiq_shared/: __init__.py  enums.py  events.py  models.py  security.py  state.py
scripts/: demo_pipeline.py  ocr_smoke.py  omniparser_smoke.py
security/: licenses.md
security/policies/: redaction.yaml
services/: export.py  integration.py  preprocess.py
tests/: conftest.py  test_api.py  test_features.py  test_inference_cache.py  test_inference_profiles.py  test_pipeline.py
